--- a/h5game_backend/static/css/common.css
+++ b/h5game_backend/static/css/common.css
@@ -33,1145 +33,11 @@ div.clear {
 div.hide {
     display: none;
 }
-
-.Header
-{
-	height:auto;
-	width:100%;
-	position:fixed;
-	top:0;
-	z-index:1;
-	border-bottom:1px solid #E3E3E2;
-}
-
-.Top
-{
-	height:33px;
-	background:#ECECEB;
-	text-align:center;
-	padding-top:7px;
-}
-
-.Logo
-{
-	position:relative;
-	float:left;
-	margin:4px 0 0 15px;
-	width:86px;
-	height:20px;
-}
-
-.SearchBox
-{
-	height:26px;
-	width:60%;
-	position:relative;
-	float:right;
-	margin-right:15px;
-	background:#FFF;
-	border:1px solid #D9D9D9;
-	border-radius:14px;
-	
-}
-
-.Search_Input
-{
-	height:26px;
-	width:77%;
-	position:relative;
-	float:left;
-	margin-left:13px;
-}
-
-.Search_Input input
-{
-    width:100%; 
-    height:26px; 
-    margin-top:0px; 
-    border:0px; 
-    font-size:14px;
-}
-
-.Navigation
-{
-	height:40px;
-	width:100%;
-	position:relative;
-	background:#E3E3E2;
-}
-
-.Navigation a
-{
-	display:block;
-	border-right:1px solid #E3E3E2;
-	font-weight:normal;
-}
-
-.Navigation li
-{
-	height:40px;
-	background:#FFF;
-	position:relative;
-	float:left;
-	line-height:40px;
-	font-size:14px;
-	color:#44423C;
-	cursor:pointer;
-	width:16%;
-}
-
-.Navigation_Check > div
-{
-	height:4px;
-	width:100%;
-	background:#53BF1D;
-	display:block;
-	position:absolute;
-	top:0px;
-	left:0px;
-}
-
-.Navigation_Check > a
-{
-	color:#53BF1D;
-}
-
-.SearchTips
-{
-	height:40px;
-	border-bottom:1px solid #E3E3E2;
-	line-height:40px;
-}
-
-.SearchTips span
-{
-	margin-left:15px;
-	position:relative;
-	float:left;
-	font-size:12px;
-	color:#8F8D88;
-}
-
-.SearchTips .keyword
-{
-    color:#53BF1D;
-    font-size:13px;
-}
-
-.Piclist
-{
-	width:100%;
-	overflow:hidden;
-	position:relative;
-}
-
-.Piclist_Box
-{
-	height:100%;
-	position:absolute;
-	top:0px;
-	left:0px;
-}
-
-.Piclist_Box img
-{
-	float:left;
-}
-
-.Banner_State_Box
-{
-	height:8px;
-	position:absolute;
-	bottom:14px;
-	right:4%;
-}
-
-.Banner_State
-{
-	display:inline-block;
-	margin-right:3px;
-	float:left;
-	cursor:pointer;
-	height:6px;
-	width:6px;
-	border:1px solid #FFF;
-	border-radius:4px;
-	background:#FFF;
-	opacity:0.4;
-}
-
-.RankList
-{
-	height:53px;
-	text-align:center;
-	border-bottom:1px solid #E3E3E2;
-	border-top:1px solid #D0D0CE;
-}
-
-.RankItemBox
-{
-	height:27px;;
-	width:168px;
-	margin:0px auto;
-	margin-top:13px;
-}
-
-.RankItemBox div
-{
-	height:23px;
-	width:82px;
-	margin:0px;
-	text-align:center;
-	line-height:23px;
-	font-size:13px;
-	position:relative;
-	float:left;
-	text-shadow:none;
-	border:2px solid #53BF1D;
-}
-
-.RankItemBox div a
-{
-    display:block;
-}
-
-.ClassifyBox
-{
-	text-align:left;
-	border-bottom:1px solid #E3E3E2;
-	border-top:1px solid #D0D0CE;
-	background:#EEEEEB;
-	padding:3px 0px 17px 24px;
-	display:block;
-}
-
-.ClassifyBox li
-{
-	font-size:13px;
-	margin:7px 0px 0px 1px;
-	display:inline-block;
-	width:80px;
-	height:20px;
-	line-height:20px;
-	text-align:center;
-	cursor:pointer;
-	color:#8F8D88;
-	text-shadow:none;
-}
-
-.ClassifyBox .Classify_Checked
-{
-	border:1px solid #53BF1D;
-	border-radius:6px;
-	background:#53BF1D;
-	color:#FFF;
-	width: 80px;
-}
-
-.ClassifyBox a {
-    display: inline-block;
-    width: 80px;
-}
-
-.Index_Content
-{
-	height:80px;
-	width:100%;
-	border-bottom:1px dashed #eee;/*E3E3E2*/
-	padding-top:10px;
-	position:relative;
-	overflow:hidden;
-}
-
-.StrategyList_Content
-{
-	height:40px;
-	width:100%;
-	border-bottom:1px dashed #eee;/*E3E3E2*/
-	padding-top:5px;
-	position:relative;
-	overflow:hidden;
-}
-
-.Strategy_ListBox
-{
-	width:100%;
-	height:auto;
-	margin-bottom:20px;
-}
-
-.Strategy_ListBox > img
-{
-	width:100%;
-}
-
-.StrategyList_ContentTitle
-{
-	margin-left:25px;
-	height:40px;
-	width:180px;
-	float:left;
-}
-
-.StrategyList_ContentTitle a
-{
-	color:#000;
-}
-
-.StrategyList_ContentTitle div
-{
-	height:40px;
-	line-height:40px;
-	width:100%;
-	text-align:left;
-	font-size:14px;
-	overflow:hidden;
-	float:left;overflow:hidden; 
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-.StrategyList_TimeBox
-{
-	height:40px;
-	width:100px;
-	float:right;
-	margin-right:10px;
-}
-
-.StrategyList_TimeBox img
-{
-	width:12px;
-	height:12px;
-	float:left;
-	margin-left:5px;
-	margin-top:14px;
-}
-
-.StrategyList_TimeBox span
-{
-	float:left;
-	height:40px;
-	font-size:14px;
-	line-height:40px;
-	margin-left:5px;
-	color:#8F8D88;
-	display:block;
-}
-
-.Content_Icon
-{
-	margin-left:15px;
-	border:1px solid #FFF;
-	border-radius:12px;
-	height:75px;
-	width:75px;
-}
-
-.Content_Label
-{
-	position:absolute;
-	left:25px;
-	height:36px;
-	border:0px solid #FFF;
-}
-
-.Index_Content img
-{
-	position:relative;
-	float:left;
-}
-
-.Index_Content_details
-{
-	width:50%;
-	height:49px;
-	position:relative;
-	float:left;
-	margin-left:13px;
-}
-
-.Index_Content_AppName , .Index_Content_AppName > h1
-{
-	font-size:14px; 
-	color:#44423C; 
-	text-align:left; 
-	overflow:hidden; 
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-.Index_Content_AppName a
-{
-	font-size:14px;
-	color:#44423C;
-	background:#FFF;
-}
-
-
-.Index_Content_AppDes h3
-{
-/*	height:18px;	*/
-	font-size:12px; 
-	color:#8F8D88; 
-	text-align:left;
-	overflow:hidden;
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-.Index_Content_Download
-{
-    text-align:right; 
-    padding-right:15px; 
-    position:relative; 
-    float:right; 
-    margin-top:18px;
-}
-.Index_Content_Download div
-{
-	height:35px;
-	width:53px;
-	/*background:url(../images/btn_01.png) no-repeat;*/
-    border-radius: 5px;
-    background-color:#53BF1D;
-	color:#FFF;
-	line-height:35px;
-	font-size:14px;
-	text-align:center;
-	cursor:pointer;
-	font-weight:normal;
-	text-shadow:none;
-	display:block;
-}
-.Index_Content_Download a.offshelf{background:#ccc;}
-
-.Index_Content_Download .disabled
-{
-    background:#ccc;
-    border-radius:5px;
-}
-
-.Index_Content .tips
-{
-    position:absolute;
-    bottom:0px;
-    right:25px;
-    background:none repeat scroll 0 0 #000000;
-    opacity:0.8;
-    color:#fff;
-    font-size:12px;
-    padding:2px 10px;
-    max-width:220px;
-    text-align:left;
-    display:none;
-}
-
-.get_more , .link_more
-{
-	width:90%;
-	height:27px;
-	background:#EEEEEB;
-	margin:0px auto;
-	cursor:pointer;
-	line-height:27px;
-	font-size:13px;
-	text-align:center;
-}
-
-.get_more div
-{
-    display:none; 
-    width:130px; 
-    height:27px; 
-    margin:0px auto;
-}
-
-.get_more img
-{
-    width:17px;
-    height:17px;
-    display:block;
-    line-height:27px;
-	margin-top:5px;
-	position:relative;
-	float:left;
-}
-
-.get_more span
-{
-	display:block;
-    line-height:27px;
-	margin-left:7px;
-	position:relative;
-	float:left;
-}
-
-.Search_Hot
-{
-	width:90%;
-	margin:0px auto;
-	margin-top:16px;
-	position:relative;
-	display:block;
-	text-align:left;
-}
-
-.Search_Hot > span
-{
-	text-shadow:none;
-	font-size:12px;
-	width:100%;
-	margin-left:4px;
-	color:#8F8D88;
-}
-
-.Search_Hot a
-{
-	text-shadow:none;
-	margin:5px 2px 0px 2px;
-	padding:0 10px;
-	background:#EEEEEB;
-	color:#8F8D88;
-	min-width:32px;
-	height:24px;
-	line-height:24px;
-	font-size:11px;
-	text-align:center;
-	display:inline-block;
-}
-
-
-.AppBox
-{
-}
-
-.App_Hots
-{
-	height:31px;
-	width:100%;
-	background:#FFF;
-	text-align:left;
-}
-
-.App_Hots > div
-{
-    width:28%;
-	overflow:hidden;
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-.App_Hots div
-{
-	height:31px;
-	line-height:31px;
-	display:inline-block;
-}
-
-.App_Hots img
-{
-	height:11px;
-	width:11px;
-	margin-top:11px;
-	position:relative;
-	float:left;
-	display:block;
-}
-
-.App_Hots span
-{
-	font-size:12px;
-	color:#8F8D88;
-	position:relative;
-	float:left;
-	margin-left:8px;
-	display:block;
-}
-
-.App_Img
-{
-	background:#EEEEEB;
-	border-top:1px solid #E2E2DF;
-	border-bottom:1px solid #D8D9DA;
-	padding-top:9px;
-	padding-bottom:9px;
-	overflow-y:hidden;
-	overflow-x:auto;
-	height:220px;
-}
-
-.App_ImgBox
-{
-	height:220px;
-	text-align:left;
-}
-
-.App_ImgBox img
-{
-	height:220px;
-	margin:0px;
-	margin-left:8px;
-	margin-bottom:8px;
-	display:inline-block;
-}
-
-.App_Category
-{
-	padding:13px 0px 13px 0px;
-	text-align:center;
-}
-
-.App_SpreadBox
-{
-	width:95%;
-	margin:0px auto;
-	margin-bottom:10px;
-}
-
-.App_SpreadTitle
-{
-	width:100%;
-	height:27px;
-	line-height:27px;
-	background:#EEEEEB;
-}
-
-.App_SpreadTitle span
-{
-	float:left;
-	padding-left:14px;
-	font-size:15px;
-	border-left:7px solid #53BF1D;
-}
-
-.App_SpreadTitle .icon
-{
-	width:15px;
-	height:15px;
-	margin:7px 16px 0px 0px;
-	float:right;
-	background:url('../images/icon_06.png') no-repeat;
-}
-
-.App_SpreadTitle .close
-{
-    background:url('../images/icon_05.png') no-repeat;
-}
-
-.App_SpreadContent
-{
-	padding:10px 12px 0px 12px;
-	text-align:justify;
-	text-justify:distribute-all-lines;
-}
-
-.CategoryLink
-{
-	background:#53BF1D;
-	color:#FFF;
-	padding:0px 10px;
-}
-
-.App_SpreadContent span,ul,table
-{
-	line-height:18px;
-	font-size:14px;
-	color:#8F8D88;
-	display:block;
-}
-
-.App_SpreadContent li
-{
-	border-bottom:1px #D8D9DA;
-	margin-bottom:10px;
-	padding-bottom:6px;
-}
-
-.StrategyTitle
-{
-	height:20px;
-	width:100%;
-	line-height:20px;
-	text-align:center;
-	font-size:16px;
-	color:#000;
-	margin-top:20px;
-}
-
-.StrategySource
-{
-	height:30px;
-	width:100%;
-	line-height:30px;
-	text-align:center;
-	font-size:14px;
-	color:#8F8D88;
-}
-
-.StrategyIntroduction
-{
-	line-height:16px;
-	text-align:center;
-	font-size:14px;
-	color:#8F8D88;
-	background:#EEEEEB;
-	padding:15px 20px 15px 20px;
-}
-
-.StrategyContent
-{
-	height:auto;
-	margin:0px auto;
-	margin-top:10px;
-	text-align:justify;
-	text-justify:distribute-all-lines;
-	font-size:14px;
-	line-height:1.5em;
-	color:#8F8D88;
-	padding:0px 25px;
-}
-
-.StrategyContent img
-{
-	max-height:280px;
-    max-width:96%;
-    float:right;
-    padding: 0 2%;
-    margin: 0 0 3px 6px;
-}
-
-.More_Strategy
-{
-	height:20px;
-	line-height:20px;
-	padding-top:5px;
-}
-
-.More_Strategy img
-{
-	width:12px;
-	height:12px;
-	float:left;
-} 
-
-.More_Strategy a
-{
-	display:block;
-	height:14px;
-	line-height:14px;
-	text-align:left;
-	overflow:hidden;
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-
-.App_Message_More
-{
-	width:90%;
-	height:27px;
-	background:#EEEEEB;
-	margin:0px auto;
-	cursor:pointer;
-	line-height:27px;
-	font-size:12px;
-	text-align:center;
-}
-
-.Footer
-{
-	height: 85px;
-	background:#EEEEEB;
-	color:#8F8D88;
-	text-align:center;
-    margin-bottom: 55px;
-    margin-top: 20px;
-}
-
-.Index_Content_details .list_app_info
-{
-    height:36px;
-    font-size:11px; 
-    color:#696864; 
-    text-align:left; 
-    position:relative;
-}
-
-.Index_Content_details .list_app_info img
-{
-    width:5px;
-    height:5px;
-    margin-top:7px; 
-    margin-left:6px;
-    margin-right:4px;
-    position:relative; 
-    float:left;
-}
-
-.Index_Content_details .list_app_info div
-{
-    position:relative; 
-    float:left;
-    max-width:70%;
-    overflow:hidden;
-	white-space:nowrap; 
-	text-overflow:ellipsis;
-}
-
-.footer_yyh
-{
-    display:block;
-    width:100%;
-    position:fixed;
-    bottom:0;
-    padding:6px 0;
-    overflow:hidden;
-    z-index:99;
-    background:none repeat scroll 0 0 rgba(0, 0, 0, 0.8);
-    color:#fff;
-}
-
-.footer_yyh .logo
-{
-    width:30px;
-    height:30px;
-    padding-left:20px;
-}
-
-.footer_yyh .desc
-{
-    text-align:left;
-    padding-left:10px;
-    float:left;
-    font-size:12px;
-    line-height:1.1;
-}
-
-.footer_yyh .down
-{
-    background:#53BF1D;
-    float:right;
-    padding:0 15px;
-    font-size:14px;
-    line-height:36px;
-    display:inline-block;
-    margin-right:20px;
-    cursor:pointer;
-    border-radius: 12px;
-}
-
-div.soft-classify h3 a {
-    color: #333;
-}
-div.soft-classify h3 {
-    text-align: left;
-    margin-top: 15px;
-    margin-bottom: 5px;
-    font-size: 17px;
-    background-image: url("../images/greendot.png");
-    background-repeat: no-repeat;
-    padding-left: 12px;
-    background-position-y: 6px;
-}
-div.soft-classify {
-    width: 90%;
-    margin: 0 auto;
-    text-align: left;
-    margin-bottom: 20px;
-}
-span.sub-classify a {
-    display: inline-block;
-    /* background-color: #000; */
-    padding: 3px 10px;
-    margin-bottom: 3px;
-}
-div.soft-classify ul li {
-    overflow: hidden;
-}
-div.navi-outer{
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-li.navi-top{
-    width: 20%;
-}
-li.navi-more {
-    display: none;
-}
-.fix-main-content {
-    margin-top:80px
-}
-.allstar50, .allstar50, .allstar45, .allstar40, .allstar35, .allstar30, .allstar25, .allstar20, .allstar15, .allstar10, .allstar05 {
-    background: url(http://img.yingyonghui.com/cps/app/ios/midstars.gif) no-repeat scroll 0 0 rgba(0, 0, 0, 0);
-    display: inline-block;
-    height: 11px;
-    margin: 0 3px 0 0;
-    overflow: hidden;
-    width: 55px;
-}
-.allstar50 {
-    background-position: 0 0;
-}
-.allstar45 {
-    background-position: 0 -11px;
-}
-.allstar40 {
-    background-position: 0 -22px;
-}
-.allstar35 {
-    background-position: 0 -33px;
-}
-.allstar30 {
-    background-position: 0 -44px;
-}
-.allstar25 {
-    background-position: 0 -55px;
-}
-.allstar20 {
-    background-position: 0 -66px;
-}
-.allstar15 {
-    background-position: 0 -77px;
-}
-.allstar10 {
-    background-position: 0 -88px;
-}
-.allstar05 {
-    background-position: 0 -99px;
-}
-span.round-tag a{
-    display: inline-block;
-    min-width: 23%;
-    border-radius: 12px;
-    border: 1px solid #e0e0e0;
-    font-size: 12px;
-    line-height: 20px;
-    margin-bottom: 6px;
-    background-color: #EEEEEB;
-    color: #8F8D88;
-}
-span.round-tag a:hover { 
-    background-color: #53BF1D;
-    color: #FFFFFF;
-}
-div.greendot {
-    font-size: 4px;
-    margin-top: 6px;
-    margin-bottom: 6px;
-}
-.related-apps-ul {
-    line-height: 18px;
-    font-size: 12px;
-    color: #8F8D88;
-    display: block;
-}
-.related-apps-li {
-    width: 33%;
-    float: left;
-    border-bottom: 1px #ebebeb;
-    border-right: 1px #ebebeb;
-    box-sizing: border-box;
-}
-.related-apps-li a div img {
-    width: 72%;
-    height: 72%;
-    border-radius: 12px;
-    border: 1px solid #e0e0e0;
-    margin-left:14%;
-}
-
-.related-apps-li a div p{
-    margin-left:3px;
-    margin-right:3px;
-    margin-top:2px;
-    margin-bottom:2px;
-    height:40px;
-    text-align:center;
-    color: #53BF1D;
-}
-
-.App_Content
-{
-	width:100%;
-    height:80px;
-	border-bottom:1px dashed #eee;/*E3E3E2*/
-	padding:5px 0px;
-	position:relative;
-	overflow:hidden;
-}
-
-.App_Content img
-{
-	position:absolute;
-    width: 80px;
-	margin-left:15px;
-	border-radius:12px;
-}
-
-.App_Content_Info
-{
-    padding-left:105px;
-    width:40%;
-    float:left;
-    font-size:11px; 
-}
-
-.App_Content_Text {
-    height:20px;
-	text-align:left;
-	overflow:hidden; 
-	white-space:nowrap; 
-    padding-left:105px;
-    padding-right:15px;
-}
-
-.App_Content_Text h1
-{
-	font-size:14px; 
-	color:#44423C; 
-	text-align:left; 
-	text-overflow:ellipsis;
-    overflow:hidden;
-}
-
-.App_Content_Text h3
-{
-	font-size:12px; 
-	color:#8F8D88; 
-	text-overflow:ellipsis;
-    overflow:hidden;
-}
-
-.App_Content_Download
-{
-    text-align:right; 
-    padding-right:15px; 
-    padding-top:5px;
-    position:relative; 
-    float:right; 
-}
-.App_Content_Download div
-{
-	height:35px;
-	width:66px;
-    line-height:33px;
-    border-radius: 5px;
-    background-color:#53BF1D;
-	color:#FFF;
-	font-size:14px;
-	text-align:center;
-	cursor:pointer;
-	display:block;
-}
-.App_Content_Download a.offshelf{background:#ccc;}
-
-.App_Content_Download .disabled
-{
-    background:#ccc;
-    border-radius:5px;
-}
-
-.App_Content_Info img
-{
-    width:5px;
-    height:5px;
-    margin-top:7px; 
-    margin-left:6px;
-    margin-right:4px;
-    position:relative; 
-    float:left;
-}
-
-.pop-holder{
-    z-index:10;
-    left:0;
-    padding-top:45%;
-    display:-webkit-box;
-    display:-ms-flexbox;
-    display:-webkit-flex;
-    display:flex;
-    background:rgba(0,0,0,.4);
-    width:100%;
-    height:500px;
-    font-size: 11px;
-    position: fixed;
-    top: 0;
-    visibility:hidden;
-}
-
-.pop-holder .row1{
-    -webkit-box-flex:1;
-    -webkit-flex:1;
-    -ms-flex:1;
-    flex:1
-}
-
-.pop-holder .row2{
-    position:relative;width:290px
-}
-
-.pop-holder .row2 .info{
-    width:100%;
-    background-color:rgba(253,253,253,.95);
-    display:inline-block;
-    border-radius:.3em
-}
-.pop-holder .row2 .info h2{
-    padding-top:1em;
-    margin-bottom:20px;
-    font-weight:700;
-    text-align:center;
-    font-size:16px;
-    color:#525252;
-}
-.pop-holder .row2 .info .con{
-    padding:0 1em 1em;
-    text-align:center;
-    font-size:14px;
-    line-height:1.4
-}
-.pop-holder .row2 .info .btn-box{
-    display:-webkit-box;
-    -webkit-box-orient:horizontal;
-    -webkit-box-pack:justify;
-    border-top:1px #ECECEE solid
-}
-.pop-holder .row2 .info .btn-box .btn-confirm {
-    -webkit-box-flex: 1;
-    padding: 14px 0;
-    text-align: center;
-    font-size: 16px;
-    font-weight:bold;
-    color: #53BF1D;
-}
-.pop-holder .row2 .info .btn-box .btn-cancel{
-    -webkit-box-flex:1;
-    padding:14px 0;
-    text-align:center;
-    font-size:16px;
-    color:#AAA8A8;
-    border-right: 1px #ECECEE solid;
-}
-.pop-holder .row3 {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1
-}
-.m-ins {
-	width: 273px;
-	height: 54px;
-	margin: 1.8rem auto;
-	background: url(../images/start_play.png);
-	background-size: 100%;
-	font-size: 1rem;
-	color: #fff;
-	display: block;
-	text-align: center;
-	line-height: 54px;
-	text-decoration: none;
+html, body {
+    margin:0;
+    padding:0;
+    height: 100%;
+    color: #ffffff;
 }
 
 @media only screen and (min-device-width:240px)and (max-device-width :700px)and (orientation:landscape){.pop-holder{padding-top:20%!important}}
