--- a/h5game_backend/static/css/welcome.css
+++ b/h5game_backend/static/css/welcome.css
@@ -1,3 +1,11 @@
+html, body {
+    margin:0;
+    padding:0;
+    height: 100%;
+    color: #ffffff;
+    font-family: MicrosoftYaHei,微软雅黑,Helvetica,STHeiti,Droid Sans Fallback;
+}
+
 #div-welcome-page{
     box-sizing:border-box;
     background : #000000 url("../images/welcome.png") no-repeat bottom left;
