--- a/h5game_backend/templates/welcome.html
+++ b/h5game_backend/templates/welcome.html
@@ -9,7 +9,7 @@
         <meta name="format-detection" content="telephone=no, email=no"/>
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/common.css')}}">
+        <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/common.css')}}"> -->
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename = 'css/welcome.css')}}">
         <title>{{resp.activeInfo.title}}</title>
     </head>
