--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -76,21 +76,23 @@
     text-decoration: none;
     overflow: hidden;
 }
-.answer_block{    
+.answer_block{
     float: left;
-    height: 180px;
-    width: 50%;
+    width: 45%;
     font-size: 1rem;
     display: block;
     text-align: center;
     border-radius: 5px;
-    opacity: 0.8;
+    opacity: 0.3;
+}
+.answer_block.odd{
+    margin-left: 10px;
 }
 .answer_block img{
     display: inline-block;
     margin-left: 5px;
-    width: 156px;
-    height: 152px;
+    width: 100%;
+    height: 100%;
     border: 4px solid black;
 }
 
@@ -105,7 +107,7 @@
 
 .answer-order{
     float: left;
-    width: 100%;
+    width: 110%;
     height: 28px;
     display: block;
     font-size: 28px;
@@ -118,7 +120,6 @@
     font-size: 18px;
 }
 .answer-order.odds{
-    margin-right: 
 }
 
 .div-next{
