--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -16,20 +16,18 @@
     background-repeat: repeat;
     width: 88%;
     margin: 0px auto;
-    min-height: 610px;
+    max-height: 570px;
     border:4px solid black;
 }
 
-.title{
+.title{    
     margin: 0px auto;
     margin-top: 15px;
     background-color: #000000;
     text-align: center;
     width: 95%;
-    height: 40px;
-    line-height: 34px;
-    font-weight: bold;
-    font-size: 1.5em;
+    height: 32px;
+    line-height: 34px
 }
 .question{
     height: 220px;
@@ -83,7 +81,7 @@
     display: block;
     text-align: center;
     border-radius: 5px;
-    opacity: 0.3;
+    opacity: 0.5;
 }
 .answer_block.odd{
     margin-left: 10px;
@@ -110,18 +108,14 @@
     width: 110%;
     height: 28px;
     display: block;
-    font-size: 28px;
     font-weight: bold;
     color: #f2a10a;
     background-color: #000000;
     text-align: left;
 }
 .answer-order span{
-    font-size: 18px;
+    font-size: 0.8em;
 }
-.answer-order.odds{
-}
-
 .div-next{
     text-align: center;
     width: 160px;
