--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -16,11 +16,11 @@
     background-repeat: repeat;
     width: 88%;
     margin: 0px auto;
-    max-height: 570px;
+    min-height: 570px;
     border:4px solid black;
 }
 
-.title{    
+.title{
     margin: 0px auto;
     margin-top: 15px;
     background-color: #000000;
@@ -29,6 +29,9 @@
     height: 32px;
     line-height: 34px
 }
+.tips{
+    font-size: 10px;
+}
 .question{
     height: 220px;
     border: 4px dotted black;
@@ -36,6 +39,7 @@
     width: 95%;
     margin-top: 10px;
 }
+
 .inner-question{
     height: 200px;
     border: 4px solid #4e0000;
@@ -43,30 +47,16 @@
     width: 96%;
     margin-top: 6px;
 }
+
 .inner-question img{
     height: 100%;
     width: 100%;
 }
-.div-game-desc{
-    text-align: center;
-}
-
-.tips{    
-    display: block;
-    background-image: url("../images/drop_tips.png");
-    margin-top: -200px;
-    margin-left: 90%;
-    height: 122px;
-    background-color: #000000;
-    z-index: 21;
-    width: 10px;
-}
-
 
 .answer{    
     width: 95%;
-    height: 250px;
-    margin: 1.8rem auto;
+    height: 290px;
+    margin: 5px auto;
     font-size: 1rem;
     display: block;
     text-align: center;
@@ -84,7 +74,7 @@
     opacity: 0.5;
 }
 .answer_block.odd{
-    margin-left: 10px;
+    margin-left: 15px;
 }
 .answer_block img{
     display: inline-block;
@@ -116,15 +106,16 @@
 .answer-order span{
     font-size: 0.8em;
 }
+
 .div-next{
     text-align: center;
     width: 160px;
+    height: 100%;
     margin: 0px auto;
-    margin-top: 25px;
-}
-
-
-.div-next.disabled{
-    text-align: center;
     margin-top: 15px;
 }
+
+.div-next img{
+    height: 34px;
+    width: 139px;
+    }
