--- a/h5game_backend/templates/game.html
+++ b/h5game_backend/templates/game.html
@@ -14,7 +14,7 @@
         <title>{{resp.activeInfo.title}}</title>
     </head>
     <body  id="main" unselectable="on" onselectstart="return false;">
-        <div id="div-game-page">
+        <div id="div-game-page-{{resp['numberIndex']}}">
             <div id="div-play-game-page">
                 <div class="title">{{resp['question']['title']}}
                     <span class="tips">----({{resp['question']['tips']}})</span>
