--- a/h5game_backend/templates/homepage.html
+++ b/h5game_backend/templates/homepage.html
@@ -38,7 +38,7 @@
                 <div class="div-homepage-prize-detail">
                     <!-- <label>{{prize.levelDesc}}</label> -->
                     <label>{{prize.prizeDesc}}</label>
-                    <label>({{prize.count}})</label>
+                    <!-- <label>({{prize.count}})</label> -->
                 </div>
             {% endfor %}
             </div>
