--- a/h5game_backend/templates/homepage.html
+++ b/h5game_backend/templates/homepage.html
@@ -44,4 +44,6 @@
             </div>
         </div>
     </body>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/share.js')}}"></script>
 </html>
