--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -121,7 +121,7 @@
 .answer_block img{
     display: inline-block;
     margin-left: 5px;
-    width: 145px;
+    width: 100%;
     border: 4px solid black;
     height: 95px;
 }
