--- a/h5game_backend/templates/prized.html
+++ b/h5game_backend/templates/prized.html
@@ -41,6 +41,7 @@
             }
         </style>
         <title>{{resp.activeInfo.title}}</title>
+        
     </head>
     <body  id="main" unselectable="on" onselectstart="return false;">
         <div id="div-prized-page">
@@ -62,8 +63,87 @@
                 到时前来兑奖
             </div>
             <div class="div-prized-bottom">
-                （关注微信,看看还有哪些冠军也在一刻talks）
+                （点击右上角，分享给更多好友来玩^.^）
             </div>
         </div>
     </body>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+    <script>
+            // alert("{{resp.weiXinSignInfo.appId}}");
+            // alert("{{resp.weiXinSignInfo.timestamp}}");
+            // alert("{{resp.weiXinSignInfo.nonceStr}}");
+            // alert("{{resp.weiXinSignInfo.appId}}");
+            wx.config({
+                debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+                appId: "{{resp.weiXinSignInfo.appId}}", // 必填，公众号的唯一标识
+                timestamp: "{{resp.weiXinSignInfo.timestamp}}", // 必填，生成签名的时间戳
+                nonceStr: "{{resp.weiXinSignInfo.nonceStr}}", // 必填，生成签名的随机串
+                signature: "{{resp.weiXinSignInfo.signature}}",// 必填，签名，见附录1
+                jsApiList: ['onMenuShareTimeline','onMenuShareAppMessage', 'onMenuShareQQ'] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+            });
+
+        wx.ready(function(){
+            // config信息验证后会执行ready方法，所有接口调用都必须在config接口获得结果之后，config是一个客户端的异步操作，所以如果需要在页面加载时就调用相关接口，则须把相关接口放在ready函数中调用来确保正确执行。对于用户触发时才调用的接口，则可以直接调用，不需要放在ready函数中。
+        });
+        wx.error(function(res){
+            // config信息验证失败会执行error函数，如签名过期导致验证失败，具体错误信息可以打开config的debug模式查看，也可以在返回的res参数中查看，对于SPA可以在这里更新签名。
+            //alert(res);
+            //str = JSON.stringify(res, null, 4); // (Optional) beautiful indented output
+            //console.log(str); // Logs output to dev tools console.
+            //alert(str); // Displays output using window.alert()
+            // alert("{{resp.weiXinSignInfo.appId}}");
+            // alert("{{resp.weiXinSignInfo.timestamp}}");
+            // alert("{{resp.weiXinSignInfo.nonceStr}}");
+            // alert("{{resp.weiXinSignInfo.signature}}");
+            //alert(location.href.split('#')[0]);
+        });
+
+        wx.onMenuShareTimeline({
+            title: '快来玩啊', // 分享标题
+            link: '{{resp.shareUrl}}', // 分享链接
+            imgUrl: 'http://ios.appchina.com/ios/mobile/images/logo_1606015.png', // 分享图标
+            success: function () {
+                afterShared();
+            },
+            cancel: function () { 
+                // 用户取消分享后执行的回调函数
+            }
+        });
+
+        wx.onMenuShareAppMessage({
+            title: '快来玩啊', // 分享标题
+            link: '{{resp.shareUrl}}', // 分享链接
+            imgUrl: 'http://ios.appchina.com/ios/mobile/images/logo_1606015.png', // 分享图标
+            desc: '我在这里给你分享个好玩的游戏，还可以拿奖', // 分享描述
+            type: 'link', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                afterShared();
+            },
+            cancel: function () { 
+                // 用户取消分享后执行的回调函数
+            }
+        });
+
+        wx.onMenuShareQQ({
+            title: '快来玩啊', // 分享标题
+            link: '{{resp.shareUrl}}', // 分享链接
+            imgUrl: 'http://ios.appchina.com/ios/mobile/images/logo_1606015.png', // 分享图标
+            desc: '我在这里给你分享个好玩的游戏，还可以拿奖', // 分享描述
+            imgUrl: 'http://ios.appchina.com/ios/mobile/images/logo_1606015.png', // 分享图标
+            success: function () {
+                afterShared();
+            },
+            cancel: function () { 
+               // 用户取消分享后执行的回调函数
+            }
+        });
+
+
+        function afterShared(){
+            //alert("shared");
+            //
+            // $("#")
+        };
+    </script>
 </html>
